# fractal

./: CMakeLists.txt  README.md
include/: color_hsv.hpp  color_rgb.hpp  framebuffer.hpp
src/: color_hsv.cpp  framebuffer.cpp  main.cpp
